--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
-<html>
- <body>
-   <p>hello word</p>
-   <h2>tom</h2>
-	 <h3>jey</h3>
-	 <h3>jey</h3>
- </body>
+<!doctype html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	 <p>hello word</p>	
+</body>
 </html>
