对项目进行了删除app.js 增加appp.js index.html添加a

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 </head>
 <body>
 	 <p>hello word</p>	
-	  <p>hello word</p>
+	 <p>hello word</p>
+	 <a href="#">点我</a>
+	 <a href="#">点我</a>
+	 <a href="#">点我</a>
 </body>
 </html>
